--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Debug Unsigned APK (universal) 
-        path: ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*universal.apk
+        path: ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*all.apk
       
     - name: Upload Aritfact (arm64-v8a)
       uses: actions/upload-artifact@v4
