--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,9 +55,35 @@ jobs:
         cd ${{ github.workspace }}/V2rayNG
         chmod 755 gradlew
         ./gradlew assembleDebug
+        
+    - name: Remove useless
+      run: |
+        rm ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*riscv64.apk
+        rm ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*mips64.apk
+        rm ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*mips.apk
+        rm ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*armeabi.apk
 
-    - name: Upload APK
+    - name: Upload Aritfact (universal)
       uses: actions/upload-artifact@v4
       with:
-        name: apk
-        path: ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/
+        name: Debug Unsigned APK (universal) 
+        path: ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*all.apk
+      
+    - name: Upload Aritfact (arm64-v8a)
+      uses: actions/upload-artifact@v4
+      with:
+        name: Debug Unsigned APK (arm64-v8a)
+        path: ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*arm64-v8a.apk
+      
+    - name: Upload Aritfact (armeabi-v7a)
+      uses: actions/upload-artifact@v4
+      with:
+        name: Debug Unsigned APK (armeabi-v7a)
+        path: ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*armeabi-v7a.apk
+      
+    - name: Upload Aritfact (x86_64)
+      uses: actions/upload-artifact@v4
+      with:
+        name: Debug Unsigned APK (x86_64)
+        path: ${{ github.workspace }}/V2rayNG/app/build/outputs/apk/debug/*x86_64.apk
+          
