--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,9 @@ jobs:
         cd ${{ github.workspace }}/YiLink
         chmod 755 gradlew
         ./gradlew assembleDebug
+
+    - name: Tree
+      run: tree -ash \${{ github.workspace }}/YiLink/app/build/outputs/apk/
         
     - name: Remove useless
       run: |
