--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,18 +60,11 @@ jobs:
     - name: Tree
       run: tree -ash \${{ github.workspace }}/YiLink/app/build/outputs/apk/
         
-    - name: Remove useless
-      run: |
-        rm ${{ github.workspace }}/YiLink/app/build/outputs/apk/debug/*riscv64.apk
-        rm ${{ github.workspace }}/YiLink/app/build/outputs/apk/debug/*mips64.apk
-        rm ${{ github.workspace }}/YiLink/app/build/outputs/apk/debug/*mips.apk
-        rm ${{ github.workspace }}/YiLink/app/build/outputs/apk/debug/*armeabi.apk
-
     - name: Upload Aritfact (universal)
       uses: actions/upload-artifact@v4
       with:
         name: Debug Unsigned APK (universal) 
-        path: ${{ github.workspace }}/YiLink/app/build/outputs/apk/debug/*all.apk
+        path: ${{ github.workspace }}/YiLink/app/build/outputs/apk/debug/*universal.apk
       
     - name: Upload Aritfact (arm64-v8a)
       uses: actions/upload-artifact@v4
